Fix book border and favicon not showing

--- a/style.css
+++ b/style.css
@@ -182,17 +182,27 @@ h3 {
   aspect-ratio: 1.5/2;
   background-color: var(--clr-primary-100);
   border: 0.1rem solid var(--clr-neutral-500);
-  border-left: 0.45rem double var(--clr-neutral-500);
+  /* border-left: 0.45rem double var(--clr-neutral-500); */
   border-radius: 0.4rem;
   box-shadow: 0 0.4rem 0.4rem var(--clr-neutral-500);
   overflow-y: auto;
   padding: 1.6rem;
+  position: relative;
   text-align: center;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+
+.book::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0.2rem;
+  border-left: 0.1rem solid var(--clr-neutral-500);
 }
 
 .book__title {
@@ -272,7 +282,6 @@ h3 {
   width: min(85%, 40rem);
   background-color: var(--clr-primary-50);
   border: 0.1rem solid var(--clr-neutral-500);
-  border-left: 0.45rem double var(--clr-neutral-500);
   border-radius: 0.4rem;
   padding: min(10%, 5rem) 0;
   position: relative;
@@ -281,6 +290,15 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.modal::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0.4rem;
+  border-left: 0.1rem solid var(--clr-neutral-500);
 }
 
 .modal .close-btn {
